# SDLShooterTutorial

./: 2DShooterUpper.sln  CMakeLists.txt
2DShooterUpper/: common.h  defs.h  draw.c  draw.h  init.c  init.h  input.c  input.h  main.c  main.h  sound.c  sound.h  stage.c  stage.h  structs.h  text.c  text.h  util.c  util.h
SDL2_mixer-2.8.0/cmake/: sdl2_mixer-config-version.cmake  sdl2_mixer-config.cmake
SDL2_mixer-2.8.0/x86_64-w64-mingw32/lib/cmake/SDL2_mixer/: sdl2_mixer-config.cmake
cmake/modules/: FindSDL2_mixer.cmake
